# cobol-modernization-openenv

./: .dockerignore  Apr ‘26 OpenEnv Hackathon Themes & Judging Criteria.md  Dockerfile  OpenEnv_Hackathon_Resources.md  README.md  cobol_migration_openenv_submission_plan.md  inference.py  openenv.yaml  pyproject.toml
docs/superpowers/plans/: 2026-04-25-invoice-cobol-oracle.md
legacy_cobol_env/: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
legacy_cobol_env/cobol_oracles/invoice/: Dockerfile  INVOICE_ORACLE.cbl  INVOICE_REC.cpy  TAXRATE.cbl  TAX_CODE.cpy
legacy_cobol_env/eval/: __init__.py  cobol_oracle.py  evidence_report.py  inspect_rollout.py  model_rollout.py  oracle_solutions.py  providers.py  run_baselines.py  run_cobol_oracle_checks.py  run_evidence_report.py  run_model_rollouts.py  run_oracles.py  trajectory.py
legacy_cobol_env/outputs/evals/: azure_gpt54mini_payroll_probe.json  azure_gpt54mini_repair1_rollouts.json  azure_gpt54mini_zeroshot_rollouts.json  baseline_results.json  cobol_invoice_oracle_check.json  oracle_model_rollouts.json  oracle_trajectories.json  score_summary.json
legacy_cobol_env/outputs/training/: dry_run_loss.csv  dry_run_metadata.json  oracle_sft.jsonl  sft_run_metadata.json
legacy_cobol_env/server/: Dockerfile  __init__.py  app.py  legacy_cobol_env_environment.py  requirements.txt  sandbox.py  task_bank.py
legacy_cobol_env/tests/: test_api_contract.py  test_cobol_oracle.py  test_environment.py  test_eval_harness.py  test_evidence_report.py  test_inference_contract.py  test_inspect_rollout.py  test_model_rollout.py  test_sft_dataset.py  test_submission_root.py  test_training_workflow.py
legacy_cobol_env/training/: COLAB_T4_GUIDE.md  README.md  __init__.py  build_sft_dataset.py  requirements-gpu.txt  sft_dataset.py  train_sft.py
server/: __init__.py  app.py
